# direct-base-controller

./: .gitignore  README.md
presentation/: component_wise_pose_error_calculator.tex  component_wise_pose_error_monitor.tex  demo.tex  direct_base_controller_coordinator.tex  index.tex  overview.tex  tasks.tex  transform_to_pose_converter.tex  twist_controller.tex  twist_limiter.tex  twist_synchronizer.tex  twist_transform.tex
presentation/setup/: commoninfo.tex  packages.tex  titlepage.tex
reports/: README.md
reports/UML_diagrams/: README.md
reports/presentations/: README.md
reports/presentations/20171023/: 20171023.tex
src/: README.md
src/group3_direct_base_controller/: CMakeLists.txt  package.xml
src/group3_direct_base_controller/ros/config/: ComponentWisePoseErrorMonitor.cfg
src/group3_direct_base_controller/ros/launch/: direct_base_controller.launch  event_gui.launch  pose_mock_up_gui.launch  twist_synchronizer.test
src/group3_direct_base_controller/ros/scripts/: component_wise_pose_error_calculator_node  direct_base_controller_coordinator_node  transform_to_pose_converter_node  twist_controller_node  twist_limiter_node  twist_synchronizer_node
src/group3_direct_base_controller/ros/src/mcr_direct_base_controller_ros/: ComponentWisePoseErrorMonitorConfig.h  component_wise_pose_error_calculator.py  component_wise_pose_error_monitor.py  component_wise_pose_error_monitor_node.cpp  component_wise_pose_error_monitor_node.h  direct_base_controller_coordinator.py  transform_to_pose_converter.py  twist_controller.py  twist_limiter.py  twist_synchronizer.py
src/group3_direct_base_controller/ros/test/: component_wise_pose_error_calculator_test.py  component_wise_pose_error_calculator_unittest.py  transform_to_pose_converter_test.py  twist_controller_test.py  twist_limiter_test.py  twist_synchronizer_test.py  twist_synchronizer_unittest.py
src/zmq/: README.md  zmqClient.py  zmqServer.py  zmq_utils.py
